--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage" : "https://https://kschlagowski.github.io.github.io/KSchlagowskiBlog",
   "name": "KSchlagowskiBlog",
   "version": "0.1.0",
   "private": true,
