--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage" : "https://https://kschlagowski.github.io.github.io/KSchlagowskiBlog",
+  "homepage": "https://https://kschlagowski.github.io.github.io/KSchlagowskiBlog",
   "name": "KSchlagowskiBlog",
   "version": "0.1.0",
   "private": true,
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.3.2",
     "cdbreact": "^1.5.18",
+    "gh-pages": "^6.1.0",
     "mdb-react-ui-kit": "^6.3.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.0",
