--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://kschlagowski.github.io/KSchlagowski.github.io",
+  "homepage": "https://kschlagowski.github.io/",
   "name": "KSchlagowskiBlog",
   "version": "0.1.0",
   "private": true,
@@ -23,7 +23,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
