--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://kschlagowski.github.io/",
+  "homepage": "https://kschlagowski.github.io/Blog",
   "name": "KSchlagowskiBlog",
   "version": "0.1.0",
   "private": true,
